<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_header_avatar"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/me" />

    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@+id/nav_header_avatar"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nav_header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/nav_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_email" />

        <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/nav_header_motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/nav_header_motto" />

    </LinearLayout>

</RelativeLayout>
